feat: add burger and minimal responsive header layout

--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./css/main.css" />
+  <link href="./css/main.css" rel="stylesheet" />
+  <link href = "./assets/fonts/style.css" rel="stylesheet" />
   <title>Document</title>
 </head>
 <body>
+  <header class="header">
+    <div class="header-content-wrap">
+      <div class="burger"><span></span></div>
+      <a class="logo-link" href="/">
+        <img src="./assets/imges/logo.png" alt="logo" />
+      </a>
+      <button class="colored-btn margin-right-1">купить gold аккаунт</button>
+      <button class="transparent-btn">создать кастинг/объявление</button>
+      <div class="auth">
+        <span>вход</span> / <span>регистрация</span>
+      </div>
+      <div class="auth-mobile">auth</div>
+    </div>
+    <nav class="navigation">
+      <ul>
+        <li>о нас</li>
+        <li>соискатели</li>
+        <li>наниматели</li>
+        <li>кастинги</li>
+        <li>календарь кастингов</li>
+      </ul>
+    </nav>
+  </header>
+
+  <main></main>
   
-  
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
