refactor: toggle logo and menu on mobile devices

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header-content-wrap">
       <div class="burger"><span></span></div>
       <a class="logo-link" href="/">
-        <img src="./assets/imges/logo.png" alt="logo" />
+        <img src="./assets/images/logo.png" alt="logo" />
       </a>
       <button class="colored-btn margin-right-1">купить gold аккаунт</button>
       <button class="transparent-btn">создать кастинг/объявление</button>
