feat: add login icon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="auth">
         <span>вход</span> / <span>регистрация</span>
       </div>
-      <div class="auth-mobile">auth</div>
+      <div class="auth-mobile"></div>
     </div>
     <nav class="navigation">
       <ul>
@@ -31,6 +31,7 @@
         <li>календарь кастингов</li>
       </ul>
     </nav>
+    
   </header>
 
   <main></main>
