feat: add variables, hovers, buttons, media icons and adaptivity. header is done

--- a/index.html
+++ b/index.html
@@ -9,29 +9,42 @@
   <title>Document</title>
 </head>
 <body>
+  
   <header class="header">
-    <div class="header-content-wrap">
-      <div class="burger"><span></span></div>
-      <a class="logo-link" href="/">
-        <img src="./assets/images/logo.png" alt="logo" />
-      </a>
-      <button class="colored-btn margin-right-1">купить gold аккаунт</button>
-      <button class="transparent-btn">создать кастинг/объявление</button>
-      <div class="auth">
-        <span>вход</span> / <span>регистрация</span>
+    <div class="header-container">
+      <div class="header-row">
+        <div class="burger"><span></span></div>
+        <a class="logo-link" href="/">
+          <img src="./assets/images/logo.png" alt="logo" />
+        </a>
+        <button class="colored-btn margin-right-1">купить gold аккаунт</button>
+        <button class="transparent-btn">создать кастинг/объявление</button>
+        <div class="auth">
+          <span>вход</span> / <span>регистрация</span>
+        </div>
+        <div class="mobile-auth"></div>
       </div>
-      <div class="auth-mobile"></div>
-    </div>
-    <nav class="navigation">
-      <ul>
-        <li>о нас</li>
-        <li>соискатели</li>
-        <li>наниматели</li>
-        <li>кастинги</li>
-        <li>календарь кастингов</li>
+      <nav class="navigation">
+        <ul>
+          <li>о нас</li>
+          <li>соискатели</li>
+          <li>наниматели</li>
+          <li>кастинги</li>
+          <li>календарь кастингов</li>
+        </ul>
+      </nav>
+      <div class="mobile-buttons-wrap">
+        <button class="colored-btn">купить gold аккаунт</button>
+        <button class="transparent-btn">создать кастинг/объявление</button>
+      </div>
+      <ul class="mobile-media">
+        <li><img src='./assets/images/media-icons/ok.svg' alt='ok' /></li> 
+        <li><img src='./assets/images/media-icons/facebook.svg' alt='facebook' /></li>
+        <li><img src='./assets/images/media-icons/vk.svg' alt='vk' /></li>
+        <li><img src='./assets/images/media-icons/twitter.svg' alt='twitter' /></li>
+        <li><img src='./assets/images/media-icons/instagram.svg' alt='instagram' /></li>
       </ul>
-    </nav>
-    
+    </div> <!-- /header-container -->
   </header>
 
   <main></main>
