refactor: base refactor for range slider

--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
     <section class="filters">
       <div class="section-inner">
 
-        <div data-type="casting" class='dropdown margin-right-1'>
+        <div data-type="casting" class='dropdown dropdown-styles'>
           <div class='selected'>Кастинг</div>
-          <ul class='options-list'>
+          <ul class='dropping-block'>
             <li class='option'>Вариант 1</li>
             <li class='option'>Вариант 2</li>
             <li class='option'>Вариант 3</li>
           </ul>
         </div>
 
-        <div data-type="gender" class='dropdown margin-right-1'>
+        <div data-type="gender" class='dropdown dropdown-styles'>
           <div class='selected'>Пол</div>
-          <ul class='options-list'>
+          <ul class='dropping-block'>
             <li class='option'>Мужской</li>
             <li class='option'>Женский</li>
           </ul>
@@ -72,6 +72,34 @@
         <div class="input-wrap">
           <input class="key-word-input" type="text" placeholder="Ключевая фраза" />
         </div>
+
+
+
+
+
+        <div id="range-slider" class='dropdown-styles'>
+          <div class='selected'>Возраст</div>
+
+          <div class='dropping-block'>
+            <div class='range-slider-wrap'>
+
+              <!-- <input type="range" min='1' max='100' value="20" />
+              <input type="range" min='1' max='100' value="80" /> -->
+
+              <div class="slider">
+                <div class="track"></div>
+                <div class="range"></div>
+                <div class="thumb left"></div>
+                <div class="thumb right"></div>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+
+
+
 
       </div>
     </section>
