--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
           <div class='dropping-block'>
             <div class='range-slider-wrap'>
 
-              <!-- <input type="range" min='1' max='100' value="20" />
-              <input type="range" min='1' max='100' value="80" /> -->
+              <input id='input-left' type="range" min='1' max='100' value="20" />
+              <input id='input-right' type="range" min='1' max='100' value="80" />
 
               <div class="slider">
                 <div class="track"></div>
