--- a/index.html
+++ b/index.html
@@ -73,28 +73,23 @@
           <input class="key-word-input" type="text" placeholder="Ключевая фраза" />
         </div>
 
-
-
-
-
         <div id="range-slider" class='dropdown-styles'>
           <div class='selected'>Возраст</div>
-
           <div class='dropping-block'>
             <div class='range-slider-wrap'>
-
-              <input id='input-left' type="range" min='1' max='100' value="20" />
-              <input id='input-right' type="range" min='1' max='100' value="80" />
-
+              <input id='input-left' type="range" min='1' max='99' value="20" />
+              <input id='input-right' type="range" min='1' max='99' value="80" />
               <div class="slider">
                 <div class="track"></div>
                 <div class="range"></div>
-                <div class="thumb left"></div>
-                <div class="thumb right"></div>
+                <div class="thumb left">
+                  <span id='left-thumb-age'>2 лет</span>
+                </div>
+                <div class="thumb right">
+                  <span id='right-thumb-age'>20 лет</span>
+                </div>
               </div>
-
             </div>
-
           </div>
         </div>
 
