--- a/index.html
+++ b/index.html
@@ -82,19 +82,12 @@
               <div class="slider">
                 <div class="track"></div>
                 <div class="range"></div>
-                <div class="thumb left">
-                  <span id='left-thumb-age'>2 лет</span>
-                </div>
-                <div class="thumb right">
-                  <span id='right-thumb-age'>20 лет</span>
-                </div>
+                <div class="thumb left"><span id='left-thumb-age'>2 лет</span></div>
+                <div class="thumb right"><span id='right-thumb-age'>20 лет</span></div>
               </div>
             </div>
           </div>
         </div>
-
-
-
 
       </div>
     </section>
