--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
           </ul>
         </div>
 
-        <div class="input-wrap">
+        <div data-type="key-word" class="input-wrap">
           <input class="key-word-input" type="text" placeholder="Ключевая фраза" />
         </div>
 
-        <div id="range-slider" class='dropdown-styles'>
+        <div data-type="range-slider" id="range-slider" class='dropdown-styles'>
           <div class='selected'>Возраст</div>
           <div class='dropping-block'>
             <div class='range-slider-wrap'>
@@ -82,11 +82,16 @@
               <div class="slider">
                 <div class="track"></div>
                 <div class="range"></div>
-                <div class="thumb left"><span id='left-thumb-age'>2 лет</span></div>
-                <div class="thumb right"><span id='right-thumb-age'>20 лет</span></div>
+                <div class="thumb left"><span id='left-thumb-age'></span></div>
+                <div class="thumb right"><span id='right-thumb-age'></span></div>
               </div>
             </div>
           </div>
+        </div>
+
+        <div data-type="filter-buttons" class="filter-buttons-wrap">
+          <button class="transparent-btn extra-filters">еще фильтры</button>
+          <button class="colored-btn search">найти</button>
         </div>
 
       </div>
