refactor: add adaptive banner block

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="./css/main.css" rel="stylesheet" />
   <link href = "./assets/fonts/PFHighwaySansPro-Light/style.css" rel="stylesheet" />
   <link href = "./assets/fonts/PFHighwaySansPro-Regular/style.css" rel="stylesheet" />
+  <link href = "./assets/fonts/PFHighwaySansPro-bold/style.css" rel="stylesheet" />
   <title>Document</title>
 </head>
 <body>
@@ -99,7 +100,16 @@
 
     <section class="banner">
       <div class="section-inner">
-        another content 
+        <div class="banner-wrap">
+          <div class="image-container">
+            <img src="./assets/images/main-image.png" alt='main-image' />
+          </div>
+          <div class="artcasting">
+            <h2>ARTcasting</h2>
+            <p>Это самый удобный, интуитивный сервис кастингов в рунете</p>
+            <button class="colored-btn">найти кастинг</button>
+          </div>
+        </div>
       </div>
     </section>
 
