feat: add candidates cards

--- a/index.html
+++ b/index.html
@@ -115,9 +115,66 @@
 
     <section class="candidates">
       <div class="section-inner">
-        content
+        <div class="candidates-wrap">
+
+          <h2>Кастинги и массовки в Москве</h2>
+
+          <div class="candidates-carousel">
+            
+            <div class="candidate-card">
+              <div class="candidate-photo-wrap">
+                <img src='./assets/images/candidate1.jpg' alt='candidate' />
+              </div>
+              <div class="summary">
+                <p class="name">Холмогорова Ирина Валентиновна</p>
+                <p class="role">Актер, Вокалист, Ведущий</p>
+                <p class="age">26 лет</p>
+              </div>
+            </div>
+
+            <div class="candidate-card">
+              <div class="candidate-photo-wrap">
+                <img src='./assets/images/candidate2.jpg' alt='candidate' />
+              </div>
+              <div class="summary">
+                <p class="name">Дюмина Марина Викторовна</p>
+                <p class="role">Актер, Вокалист, Ведущий</p>
+                <p class="age">32 года</p>
+              </div>
+            </div>
+
+            <div class="candidate-card">
+              <div class="candidate-photo-wrap">
+                <img src='./assets/images/candidate3.jpg' alt='candidate' />
+              </div>
+              <div class="summary">
+                <p class="name">Воронин Сергей </p>
+                <p class="role">Актер, Вокалист, Ведущий</p>
+                <p class="age">28 лет</p>
+              </div>
+            </div>
+
+            <div class="candidate-card">
+              <div class="candidate-photo-wrap">
+                <img src='./assets/images/candidate4.jpg' alt='candidate' />
+              </div>
+              <div class="summary">
+                <p class="name">Смирнов Роман</p>
+                <p class="role">Актер, Вокалист, Ведущий</p>
+                <p class="age">19 лет</p>
+              </div>
+            </div>
+
+            <div class="add-profile">
+              добавить анкету
+            </div>
+  
+          </div>
+
+        </div>
       </div>
     </section>
+    
   </main>
   
   <script type="module" src="./scripts/index.js"></script>
