refactor: add adaptive carousel layout

--- a/index.html
+++ b/index.html
@@ -115,61 +115,145 @@
 
     <section class="candidates">
       <div class="section-inner">
+        <h2>Кастинги и массовки в Москве</h2>
+
         <div class="candidates-wrap">
-
-          <h2>Кастинги и массовки в Москве</h2>
-
           <div class="candidates-carousel">
-            
-            <div class="candidate-card">
-              <div class="candidate-photo-wrap">
-                <img src='./assets/images/candidate1.jpg' alt='candidate' />
-              </div>
-              <div class="summary">
-                <p class="name">Холмогорова Ирина Валентиновна</p>
-                <p class="role">Актер, Вокалист, Ведущий</p>
-                <p class="age">26 лет</p>
-              </div>
-            </div>
+            <div class="strip">
 
-            <div class="candidate-card">
-              <div class="candidate-photo-wrap">
-                <img src='./assets/images/candidate2.jpg' alt='candidate' />
-              </div>
-              <div class="summary">
-                <p class="name">Дюмина Марина Викторовна</p>
-                <p class="role">Актер, Вокалист, Ведущий</p>
-                <p class="age">32 года</p>
-              </div>
-            </div>
+              <button class="arrow next"></button>
+              <button class="arrow prev"></button>
+              
+              <ul class="carousel-list">
+                <li class="candidate-card">
+                  <div class="candidate-photo-wrap">
+                    <img src='./assets/images/candidate1.jpg' alt='candidate' />
+                  </div>
+                  <div class="summary">
+                    <p class="name">Холмогорова Ирина Валентиновна</p>
+                    <p class="role">Актер, Вокалист, Ведущий</p>
+                    <p class="age">26 лет</p>
+                  </div>
+                </li>
 
-            <div class="candidate-card">
-              <div class="candidate-photo-wrap">
-                <img src='./assets/images/candidate3.jpg' alt='candidate' />
-              </div>
-              <div class="summary">
-                <p class="name">Воронин Сергей </p>
-                <p class="role">Актер, Вокалист, Ведущий</p>
-                <p class="age">28 лет</p>
-              </div>
-            </div>
+                <li class="candidate-card">
+                  <div class="candidate-photo-wrap">
+                    <img src='./assets/images/candidate2.jpg' alt='candidate' />
+                  </div>
+                  <div class="summary">
+                    <p class="name">Дюмина Марина Викторовна</p>
+                    <p class="role">Актер, Вокалист, Ведущий</p>
+                    <p class="age">32 года</p>
+                  </div>
+                </li>
 
-            <div class="candidate-card">
-              <div class="candidate-photo-wrap">
-                <img src='./assets/images/candidate4.jpg' alt='candidate' />
-              </div>
-              <div class="summary">
-                <p class="name">Смирнов Роман</p>
-                <p class="role">Актер, Вокалист, Ведущий</p>
-                <p class="age">19 лет</p>
-              </div>
-            </div>
+                <li class="candidate-card">
+                  <div class="candidate-photo-wrap">
+                    <img src='./assets/images/candidate3.jpg' alt='candidate' />
+                  </div>
+                  <div class="summary">
+                    <p class="name">Воронин Сергей </p>
+                    <p class="role">Актер, Вокалист, Ведущий</p>
+                    <p class="age">28 лет</p>
+                  </div>
+                </li>
 
-            <div class="add-profile">
-              добавить анкету
-            </div>
-  
-          </div>
+                <li class="candidate-card">
+                  <div class="candidate-photo-wrap">
+                    <img src='./assets/images/candidate4.jpg' alt='candidate' />
+                  </div>
+                  <div class="summary">
+                    <p class="name">Смирнов Роман</p>
+                    <p class="role">Актер, Вокалист, Ведущий</p>
+                    <p class="age">19 лет</p>
+                  </div>
+                </li>
+
+                <li class="candidate-card">
+                  <div class="candidate-photo-wrap">
+                    <img src='./assets/images/candidate1.jpg' alt='candidate' />
+                  </div>
+                  <div class="summary">
+                    <p class="name">Холмогорова Ирина Валентиновна</p>
+                    <p class="role">Актер, Вокалист, Ведущий</p>
+                    <p class="age">26 лет</p>
+                  </div>
+                </li>
+
+                <li class="candidate-card">
+                  <div class="candidate-photo-wrap">
+                    <img src='./assets/images/candidate1.jpg' alt='candidate' />
+                  </div>
+                  <div class="summary">
+                    <p class="name">Холмогорова Ирина Валентиновна</p>
+                    <p class="role">Актер, Вокалист, Ведущий</p>
+                    <p class="age">26 лет</p>
+                  </div>
+                </li>
+
+
+                <li class="candidate-card">
+                  <div class="candidate-photo-wrap">
+                    <img src='./assets/images/candidate3.jpg' alt='candidate' />
+                  </div>
+                  <div class="summary">
+                    <p class="name">Воронин Сергей </p>
+                    <p class="role">Актер, Вокалист, Ведущий</p>
+                    <p class="age">28 лет</p>
+                  </div>
+                </li>
+
+                <li class="candidate-card">
+                  <div class="candidate-photo-wrap">
+                    <img src='./assets/images/candidate1.jpg' alt='candidate' />
+                  </div>
+                  <div class="summary">
+                    <p class="name">Холмогорова Ирина Валентиновна</p>
+                    <p class="role">Актер, Вокалист, Ведущий</p>
+                    <p class="age">26 лет</p>
+                  </div>
+                </li>
+
+                <li class="candidate-card">
+                  <div class="candidate-photo-wrap">
+                    <img src='./assets/images/candidate4.jpg' alt='candidate' />
+                  </div>
+                  <div class="summary">
+                    <p class="name">Смирнов Роман</p>
+                    <p class="role">Актер, Вокалист, Ведущий</p>
+                    <p class="age">19 лет</p>
+                  </div>
+                </li>
+
+                <li class="candidate-card">
+                  <div class="candidate-photo-wrap">
+                    <img src='./assets/images/candidate2.jpg' alt='candidate' />
+                  </div>
+                  <div class="summary">
+                    <p class="name">Дюмина Марина Викторовна</p>
+                    <p class="role">Актер, Вокалист, Ведущий</p>
+                    <p class="age">32 года</p>
+                  </div>
+                </li>
+
+                <li class="candidate-card">
+                  <div class="candidate-photo-wrap">
+                    <img src='./assets/images/candidate2.jpg' alt='candidate' />
+                  </div>
+                  <div class="summary">
+                    <p class="name">Дюмина Марина Викторовна</p>
+                    <p class="role">Актер, Вокалист, Ведущий</p>
+                    <p class="age">32 года</p>
+                  </div>
+                </li>
+
+                <div class="add-profile">
+                  добавить анкету
+                </div>
+              </ul>
+
+            </div> <!-- /strip -->
+          </div> <!-- /candidates-carousel -->
 
         </div>
       </div>
