--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </header>
 
   <main class="main">
-    <section class="filters">
+    <div class="filters">
       <div class="section-inner">
 
         <div data-type="casting" class='dropdown dropdown-styles'>
@@ -96,7 +96,7 @@
         </div>
 
       </div>
-    </section>
+    </div>
 
     <section class="banner">
       <div class="section-inner">
@@ -120,7 +120,6 @@
         <div class="candidates-wrap">
           <div class="candidates-carousel">
             <div class="strip">
-
               <button class="arrow next"></button>
               <button class="arrow prev"></button>
               
@@ -246,21 +245,18 @@
                     <p class="age">32 года</p>
                   </div>
                 </li>
-
-                <div class="add-profile">
-                  добавить анкету
-                </div>
               </ul>
+              <div class="add-profile">
+                добавить анкету
+              </div>
 
             </div> <!-- /strip -->
           </div> <!-- /candidates-carousel -->
-
-        </div>
-      </div>
+        </div> <!-- /candidates-wrap -->
+      </div> <!-- /section-inner -->
     </section>
-    
   </main>
-  
+
   <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
